# library-system-demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cc
core/: CMakeLists.txt  book.cc  book.h  item.cc  item.h  manager.cc  manager.h  non_copyable_movable.h  painting.cc  painting.h  video_cd.cc  video_cd.h
