CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
PROJECT(taotu CXX)

SET(CMAKE_CXX_STANDARD 17)

SET(CXX_FLAGS
  -std=c++17
  -g
  -Wall
  -O3
)

ADD_DEFINITIONS(-Wno-format-security)

STRING(REPLACE ";" " " CMAKE_CXX_FLAGS "${CXX_FLAGS}")

MESSAGE(STATUS "CXX_FLAGS = " ${CMAKE_CXX_FLAGS} " " ${CMAKE_CXX_FLAGS_${BUILD_TYPE}})

ADD_SUBDIRECTORY(core)

SET(EXECUTABLE_OUTPUT_PATH  "${PROJECT_BINARY_DIR}/output/bin/")
