CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
PROJECT(taotu CXX)

SET(CMAKE_CXX_STANDARD 17)

SET(CXX_FLAGS
  -std=c++17
  -Wall
  -O3
)

ADD_DEFINITIONS(-Wno-format-security)

STRING(REPLACE ";" " " CMAKE_CXX_FLAGS "${CXX_FLAGS}")
MESSAGE(STATUS "CXX_FLAGS = " ${CMAKE_CXX_FLAGS} " " ${CMAKE_CXX_FLAGS_${BUILD_TYPE}})

SET(LIBRARY_OUTPUT_PATH  "${PROJECT_BINARY_DIR}/output/lib/")
ADD_SUBDIRECTORY(core)

SET(EXECUTABLE_OUTPUT_PATH  "${PROJECT_BINARY_DIR}/output/bin/")
ADD_EXECUTABLE(library_system_demo main.cc)
TARGET_LINK_LIBRARIES(library_system_demo PUBLIC core-static)
